maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:15: error: '(' expected but identifier found.
  if estFaceMur(){
     ^