maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    keepHandOnSideWall()
  }
}

def keepHandOnSideWall(){
  gauche()
  if (estFaceMur()){
    droite()
  }
  if (estFaceMur()){
    droite()
  }
  if estFaceMur(){
    droite()
  }
  avance()
}